fix: заменить ArrayList на LinkedList